@@ -10,7 +10,6 @@ Checks: >
   -clang-analyzer-valist.Uninitialized,
   -clang-diagnostic-unused-function,
   -concurrency-mt-unsafe,
-  -google-readability-todo,
   -hicpp-multiway-paths-covered,
   -hicpp-signed-bitwise,
   -llvm-header-guard,
